--- a/css/main.css
+++ b/css/main.css
@@ -136,9 +136,23 @@ img {
 .conteiner {
   padding-left: 15px;
   padding-right: 15px;
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .conteiner {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .conteiner {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .conteiner {
+    width: 1200px;
+  }
 }
 
 .section {
@@ -639,8 +653,29 @@ img {
   background-color: var(--btn-hover-cl);
 }
 
+.studio {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .studio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .studio__list {
-  --items: 4;
+  --items: 1;
+}
+@media screen and (min-width: 768px) {
+  .studio__list {
+    --items: 2;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .studio__list {
+    --items: 4;
+  }
 }
 
 .studio__icons {
@@ -655,7 +690,7 @@ img {
           justify-content: center;
   margin-bottom: 30px;
   gap: 30px;
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--contacts-bg-cl);
   border-radius: 4px;
@@ -687,6 +722,12 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .studio__subtitle {
+    text-align: left;
+  }
 }
 
 .studio__desc {
