--- a/scss/layout/_studio.scss
+++ b/scss/layout/_studio.scss
@@ -1,5 +1,22 @@
+.studio{
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 .studio__list {
-    --items: 4;
+    --items: 1;
+
+  @media screen and (min-width: 768px) {
+    --items: 2;
+  }
+
+  @media screen and (min-width: 1200px) {
+   --items: 4;
+  }
 }
 
 .studio__icons {
@@ -9,7 +26,8 @@
     margin-bottom: 30px;
     gap: 30px;
 
-    width: 270px;
+    // width: 270px;
+    width: 100%;
     height: 120px;
     background-color: var(--contacts-bg-cl);
     border-radius: 4px;
@@ -41,6 +59,11 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-bottom: 10px;
+    text-align: center;
+
+    @media screen and (min-width:768px) {
+      text-align: left;
+    }
 }
 
 .studio__desc {
